--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ h1
   background-color: #C1F4C5;
   position: relative;
   padding-top: 100px;
+  height: 100%;
 }
 h2{
   color: #66BFBF;
@@ -25,6 +26,10 @@ h2{
 h3{
   color: #11999E;
 
+}
+.heading{
+  font-weight: 900;
+  
 }
 .subtext{
   font-size: 2.5rem;
